--- a/atlas.env.example
+++ b/atlas.env.example
@@ -1,8 +1,7 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://hpariya195:Harsh%402005@cluster0.audzrvd.mongodb.net/
+MONGODB_URI=mongodb+srv://hpariya195:Harsh%402005@cluster0.audzrvd.mongodb.net/campus_navigation
 MONGODB_SECONDARY_URI=mongodb+srv://hpariya195:*****@cluster0.rbstndt.mongodb.net/MERN/tasks
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=7d
 NODE_ENV=development
 FRONTEND_URL=https://campusnavbyhp.netlify.app,http://localhost:3000
-
