--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ node_modules/
 .DS_Store
 
 secrets/
+*.json
 firebase-admin.json
-*.json   # Optional: ignore all JSON keys
+firebase-admin.json.json
+
